--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ÍÏ×§deno</title>
+    <title>拖拽demo</title>
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
     <script type="text/javascript" src="drag.js"></script>
     <link rel="stylesheet" type="text/css" href="drag.css">
