--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>拖拽demo</title>
-    <script type="text/javascript" src="jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="drag.js"></script>
-    <link rel="stylesheet" type="text/css" href="drag.css">
+    <script type="text/javascript" src="js/jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="js/drag.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/drag.css">
 </head>
 <body>
 	<div style="width: 1500px;height: 800px;background: #ddd;overflow: hidden;">
