--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>拖拽demo</title>
-    <script type="text/javascript" src="js/jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="js/drag.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/drag.css">
-</head>
-<body>
-	<div style="width: 1500px;height: 800px;background: #ddd;overflow: hidden;">
-		<div id="box" style="zoom:50%;" onmousewheel="changeSize(event)"></div>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>project_template_react</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
